--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
   "author": "E. Martinez",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
+    "@azure/cosmos": "^3.6.3",
+    "@types/node": "^13.13.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^3.22.0"
+    "helmet": "^3.22.0",
+    "readline-sync": "^1.4.10"
   }
 }
